# MoltyClaw

./: .gitignore  LICENSE  README.md  SOUL.md  VERSION  arquivos padrão dos md.md  dump_mistral.txt  mcp_servers.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  start_moltyclaw.py
Messages Commit/Releases/: Release 26.5.4.md  commit-v26.29.3.md
src/: config_loader.py  heartbeat.py  initializer.py  memory_rag.py  moltyclaw.py  onboarding.py  routing.py  scheduler.py  skills.py  subagent_registry.py  system_prompt.py
src/integrations/: bluesky_bot.py  discord_bot.py  mcp_hub.py  telegram_bot.py  twitter_bot.py  whatsapp_bridge.js  whatsapp_server.py
src/terminal/: pty_bridge.js
src/webui/: app.py  env_manager.py  gateway.py
src/webui/static/: script.js  style.css
src/webui/templates/: index.html
